Update `auto.mdx` to most recent changes

--- a/src/pages/pt-br/install/auto.mdx
+++ b/src/pages/pt-br/install/auto.mdx
@@ -91,25 +91,39 @@ Se você não conseguir abrir o seu projeto no navegador, volte ao terminal onde
 
 ## Templates Iniciais
 
-Você também pode iniciar um novo projeto Astro com base em um repositório existente do GitHub passando o argumento `--template` ao comando `create astro`.
+Você também pode iniciar um novo projeto Astro com base em um [exemplo oficial](https://github.com/withastro/astro/tree/main/examples) ou da branch `main` de qualquer repositório do GitHub passando o argumento `--template` ao comando `create astro`.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
+  # cria um novo projeto com um exemplo oficial
+  npm create astro@latest -- --template <nome-exemplo>
+  
+  # cria um novo projeto com base na branch main de um repositório do GitHub
   npm create astro@latest -- --template <nome-github>/<repositório-github>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
+  # cria um novo projeto com um exemplo oficial
+  pnpm create astro@latest --template <nome-exemplo>
+  
+  # cria um novo projeto com base na branch main de um repositório do GitHub
   pnpm create astro@latest --template <nome-github>/<repositório-github>
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
+  # cria um novo projeto com um exemplo oficial
+  yarn create astro --template <nome-exemplo>
+  
+  # cria um novo projeto com base na branch main de um repositório do GitHub
   yarn create astro --template <nome-github>/<repositório-github>
   ```
   </Fragment>
 </PackageManagerTabs>
+
+Por padrão, este comando irá utilizar a branch `main` do repositório do template. Para usar um nome de branch diferente, passe-o como parte do argumento `--template` : `<nome-github>/<repositório-github>#<branch>`.
 
 Explore nosso [mostruário de temas e templates iniciais](https://astro.build/themes/) no qual você pode navegar temas para blogs, portfólios, documentação, páginas iniciais e mais! Ou então, [pesquise no GitHub](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories) para mais projetos iniciais.
 
