Fix canonical tag
Fixes a typo where a canonical URL is specified using `<meta>` tag with `rel` attribute

--- a/src/pages/en/core-concepts/layouts.mdx
+++ b/src/pages/en/core-concepts/layouts.mdx
@@ -124,7 +124,7 @@ const { frontmatter, url } = Astro.props;
 ---
 <html>
   <head>
-    <meta rel="canonical" href={new URL(url, Astro.site).pathname}>
+    <link rel="canonical" href={new URL(url, Astro.site).pathname}>
     <title>{frontmatter.title}</title>
   </head>
   <body>
