--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -768,7 +768,7 @@ const draftBlogPosts = await getCollection('blog', ({ data }) => {
 ---
 ```
 
-[See the `getCollection()` guide section](/en/guides/content-collections/#getcollection) for complete usage examples.
+[See the `Content Collection` guide](/en/guides/content-collections/#querying-collections) for example usage.
 
 ### `getEntryBySlug()`
 
@@ -785,18 +785,17 @@ const enterprise = await getEntryBySlug('blog', 'enterprise.md');
 ---
 ```
 
+[See the `Content Collection` guide](/en/guides/content-collections/#querying-collections) for example usage.
+
 ### Collection Entry Type
 
 The [`getCollection()`](#getcollection) and [`getEntryBySlug()`](#getEntryBySlug) functions each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
 
 ```ts
 import type { CollectionEntry } from 'astro:content';
-
-// Example: Receive a `src/content/blog/` entry as props
-type Props = CollectionEntry<'blog'>;
 ```
 
-A `CollectionEntry<TCollectionName>` is an object with the following values:
+The `CollectionEntry<TCollectionName>` type is an object with the following values. `TCollectionName` is the name of the collection you're querying (e.g. `CollectionEntry<'blog'>`).
 
 #### `id`
 
