update bad links

--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -789,7 +789,7 @@ const enterprise = await getEntryBySlug('blog', 'enterprise.md');
 
 ### Collection Entry Type
 
-The [`getCollection()`](#getcollection) and [`getEntryBySlug()`](#getEntryBySlug) functions each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
+The [`getCollection()`](#getcollection) and [`getEntryBySlug()`](#geteentrybyslug) functions each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
 
 ```ts
 import type { CollectionEntry } from 'astro:content';
@@ -840,7 +840,7 @@ const { Content, headings, remarkPluginFrontmatter } = await entry.render();
 ---
 ```
 
-See [the rendering entry contents guide](/en/guides/content-collections/#rendering-content) for complete usage examples.
+[See the `Content Collection` guide](/en/guides/content-collections/#rendering-content-to-html) for example usage.
 
 ## `import.meta`
 
