--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -759,7 +759,7 @@ const draftBlogPosts = await getCollection('blog', ({ data }) => {
 ---
 ```
 
-[Consulta la sección de guía de `getCollection()`](/es/guides/content-collections/#getcollection) para ejemplos de uso completo.
+[Consulta la sección de guía de `getCollection()`](/es/guides/content-collections/#querying-collections) para ejemplos de uso completo.
 
 ### `getEntry()`
 
