--- a/src/pages/pt-br/reference/api-reference.mdx
+++ b/src/pages/pt-br/reference/api-reference.mdx
@@ -754,7 +754,7 @@ const postagensRascunhoBlog = await getCollection('blog', ({ data }) => {
 ---
 ```
 
-[Veja a seção guia de `getCollection()`](/pt-br/guides/content-collections/#getcollection) para exemplos completos de uso.
+[Veja a seção guia de `getCollection()`](/pt-br/guides/content-collections/#querying-collections) para exemplos completos de uso.
 
 ### `getEntry()`
 
