--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -829,7 +829,7 @@ const {Content, headings, remarkPluginFrontmatter} = await entry.render();
 ---
 ```
 
-Ver [la guía de renderizado de contenido de entrada](/es/guides/content-collections/#rendering-entry-content) para ejemplos de uso completo.
+Ver [la guía de renderizado de contenido de entrada](/es/guides/content-collections/) para ejemplos de uso completo.
 
 ## `import.meta`
 
