--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -8,7 +8,7 @@ i18nReady: true
 Les **Layouts** (ou "mise-en-pages" en français) sont des [composants Astro](/fr/core-concepts/astro-components/) utilisés pour fournir une structure d'interface utilisateur réutilisable, comme un modèle de page.
 
 Par convention, nous utilisons le terme "mise en page" pour les composants Astro qui fournissent des éléments d'interface utilisateur commune à toutes les pages, tels que les en-têtes, les barres de navigation et les pieds de page. Un composant de mise en page typique d'Astro fournit [aux pages Astro, Markdown ou MDX](/fr/core-concepts/astro-pages/) les éléments suivants :
-- une **page shell** (`<html>`, `<head>` et `<body>` tags)
+- une **page shell** (`balises <html>`, `<head>` et `<body>`)
 - un [**`<slot />`**](/fr/core-concepts/astro-components/#les-emplacements-slots) pour spécifier où le contenu de chaque page doit être injecté.
 
 Mais, un composant de mise en page n'a rien de spécial ! Ils peuvent [accepter des propriétés](/fr/core-concepts/astro-components/#props-de-composant) et [importer et utiliser d'autres composants](/fr/core-concepts/astro-components/#structure-du-composant) comme n'importe quel autre composant Astro. Ils peuvent inclure [des composants de frameworks d'interface utilisateur](/fr/core-concepts/framework-components/) et [des scripts côté client](/fr/core-concepts/astro-components/#scripts-côté-client). Ils ne sont même pas obligés de fournir une page shell complète, et peuvent plutôt être utilisés comme des modèles d'interface utilisateur partielle.
