Fix: 'mises en page' to 'composants de mise en page
Co-authored-by: Happydev <81974850+MoustaphaDev@users.noreply.github.com>

--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -60,7 +60,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 
 ## Mises en page Markdown/MDX
 
-Les mises en page sont particulièrement utiles pour [les pages Markdown et MDX](/fr/guides/markdown-content/#pages-markdown-et-mdx) qui, autrement, n'auraient pas de formatage de page.
+Les composants de mise en page sont particulièrement utiles pour [les pages Markdown et MDX](/fr/guides/markdown-content/#pages-markdown-et-mdx) qui, autrement, n'auraient pas de formatage de page.
 
 Astro fournit une propriété spéciale `layout` frontmatter pour spécifier le composant `.astro` à utiliser comme mise en page.
 
