--- a/src/pages/ja/guides/deploy/vercel.mdx
+++ b/src/pages/ja/guides/deploy/vercel.mdx
@@ -19,7 +19,7 @@ Astroプロジェクトはデフォルトで静的サイトです。静的なAst
 
 ### SSRアダプター
 
-AstroプロジェクトでSSRを有効にしてVercelにデプロイするには、以下の手順を実行します。
+AstroプロジェクトでSSRを有効にしてVercelにデプロイする方法について説明します。
 
 以下の`astro add`コマンドにより、AstroプロジェクトでSSRを有効にするための[Vercelアダプター](/ja/guides/integrations-guide/vercel/)を追加します。これにより、アダプターのインストールと、`astro.config.mjs`ファイルへの適切な変更が1ステップで行われます。
 
