--- a/src/pages/es/guides/styling.mdx
+++ b/src/pages/es/guides/styling.mdx
@@ -482,7 +482,7 @@ Svelte en Astro también funciona exactamente como se espera: [Svelte Styling Do
 
 Cualquier método de estilo de Astro está disponible para un [componente de diseño de Markdown](/es/core-concepts/layouts/#plantillas-de-markdownmdx).
 
-You can apply global styles to your Markdown content by adding [`<style>` tags](#estilos-globales) and [imported stylesheets](#estilos-externos) to the layout that wraps your page content. You can also add [CSS integrations](##integraciones-css) including [Tailwind](/es/guides/integrations-guide/tailwind/).
+You can apply global styles to your Markdown content by adding [`<style>` tags](#estilos-globales) and [imported stylesheets](#estilos-externos) to the layout that wraps your page content. You can also add [CSS integrations](#integraciones-css) including [Tailwind](/es/guides/integrations-guide/tailwind/).
 
 If you are using Tailwind, the [typography plugin](https://tailwindcss.com/docs/typography-plugin) can be useful for styling Markdown.
 
