Apply suggestions from Dan code review
Co-authored-by: Dan Jutan <danjutan@gmail.com>

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -18,21 +18,21 @@ Gatsby and Astro share some similarities that will help you migrate your project
 
 - Astro has built-in support for [Markdown](/en/guides/markdown-content/) and an integration for using MDX files. Also, you can configure and continue to use many of your existing Markdown plugins.
 
-- Astro also has [official integrations for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
+- Astro also has an [official integration for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
 
-- Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including React libraries. You may be able to keep some or all of your existing React components and dependencies.
+- Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including React libraries. Many of your existing dependencies will work in Astro.
 
-- Astro projects can also be SSG or [SSR with page-level prerendering](/en/guides/server-side-rendering/#prerendering).
+- Like Gatsby, Astro projects can be SSG or [SSR with page-level prerendering](/en/guides/server-side-rendering/#prerendering).
 
 ## Key Differences between Gatsby and Astro
 
 When you rebuild your Gatsby site in Astro, you will notice some important differences:
 
-- [MPA vs SPA](/en/concepts/mpa-vs-spa/): Gatsby is a React single-page app, and uses `index.js` as your project's root. Astro is a multi-page site, and `index.astro` is your home page.
+- [MPA vs SPA](/en/concepts/mpa-vs-spa/): Gatsby projects are React single-page apps and use `index.js` as your project's root. Astro projects are multi-page sites, and `index.astro` is your home page.
 
 - [Astro components](/en/core-concepts/astro-components/) are not written as exported functions that return page templating. Instead, you'll split your code into a "code fence" and a body exclusively for the HTML you generate.
 
-- [Local file data](/en/guides/imports/): Gatsby uses GraphQL to retrieve data from your project files. Astro uses ESM imports and a top-level await [`Astro.glob()`](/en/guides/imports/#astroglob) call to import data from your project files. GraphQL may optionally be added to your Astro project but is not included by default.
+- [Local file data](/en/guides/imports/): Gatsby uses GraphQL to retrieve data from your project files. Astro uses ESM imports and a top-level await [`Astro.glob()`](/en/guides/imports/#astroglob) call to import data from your project files. You can manually add GraphQL to your Astro project but it is not included by default.
 
 
 ## Convert your Gatsby Project
@@ -97,7 +97,7 @@ Gatsby has several top-level configuration files that also include site and page
 
 - `gatsby-config.js`: Move your `siteMetadata: {}` into `src/data/siteMetadata.js` (or `siteMetadata.json`) to import data about your site (title, description, social accounts, etc.) into page layouts.
 
-- `gatsby-browser.js`: Consider adding anything used here directly into your main layout's `<head>` tag.
+- `gatsby-browser.js`: Consider adding anything used here directly into your [main layout](#migrating-layout-files)'s `<head>` tag.
 
 - `gatsby-node.js`: You will not need to create your own nodes in Astro, but viewing the schema in this file may help you with defining types in your Astro project.
 
@@ -135,7 +135,7 @@ Here are some tips for converting a Gatsby `.js` component into a `.astro` compo
 
 4. Use [`Astro.props`](/en/reference/api-reference/#astroprops) to access any additional props that were previously passed to your Gatsby function.
 
-4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/core-concepts/framework-components/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
+4. Decide whether any imported components also need to be converted to Astro. With the official React integration installed, you can [use existing React components in your Astro files](/en/core-concepts/framework-components/). But, you may want to convert them to `.astro` components, especially if they do not need to be interactive!
 
 4. Remove any GraphQL queries. Instead, use import and [`Astro.glob()`](/en/reference/api-reference/#astroglob) statements to query your local files. Update any [dynamic HTML content variables](/en/core-concepts/astro-components/#dynamic-html) to use Astro-specific properties instead.
 
@@ -240,7 +240,7 @@ Compare the following Gatsby component and a corresponding Astro component:
 
 ### Migrating Layout Files
 
-You may find it helpful to start by converting your Next.js layouts and templates into [Astro layout components](/en/core-concepts/layouts/).
+You may find it helpful to start by converting your Gatsby layouts and templates into [Astro layout components](/en/core-concepts/layouts/).
 
 Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present, so it is common to reuse a layout file across pages. Astro uses a [`<slot />`](/en/core-concepts/astro-components/#slots) instead of React's `{children}` prop for page content, with no import statement required. Your Gatsby `layout.js` and templates will not include these.
 
@@ -355,7 +355,7 @@ Convert any inline style objects (`style={{ fontWeight: "bold" }}`) to inline HT
 
 You may also need to replace any [CSS-in-JS libraries](https://github.com/withastro/astro/issues/4432) (e.g. styled-components) with other available CSS options in Astro.
 
-Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your code are required!
+Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your existing Tailwind code are required!
 
 Global styling is achieved in Gatsby using CSS imports in `gatsby-browser.js`. In Astro, you will import `.css` files directly into a main layout component to achieve global styles.
 
