--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -18,7 +18,7 @@ Next.js and Astro share some similarities that will help you migrate your projec
 - Astro projects can also be SSG or [SSR with page-level prerendering](/en/guides/server-side-rendering/#prerendering).
 - Astro uses file-based routing, and [allows specially named pages to create dynamic routes](/en/core-concepts/routing/#dynamic-routes).
 - Astro is [component-based](/en/core-concepts/components/), and your markup structure will be similar before and after your migration.
-- Astro has [official integration for using React, Preact, and Solid](/en/guides/integrations-guide/react/) so you can use your existing JSX components. Note that in Astro, these files **must** have a `.jsx` or `.tsx` extension.
+- Astro has [official integrations for React, Preact, and Solid](/en/guides/integrations-guide/react/) so you can use your existing JSX components. Note that in Astro, these files **must** have a `.jsx` or `.tsx` extension.
 - Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including React libraries. Many of your existing dependencies will work in Astro.
 
 ## Key Differences between Next.js and Astro
@@ -117,7 +117,7 @@ Here are some tips for converting a Next `.js` component into a `.astro` compone
 
 4. Use [`Astro.props`](/en/reference/api-reference/#astroprops) to access any additional props that were previously passed to your Next function.
 
-4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/core-concepts/framework-components/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
+4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/core-concepts/framework-components/). But, you may want to convert them to `.astro` components, especially if they do not need to be interactive!
 
 4. Replace `getStaticProps()` with import statements or [`Astro.glob()`](/en/reference/api-reference/#astroglob) to query your local files. Use `fetch()` to fetch external data.
 
@@ -276,7 +276,7 @@ export default class MyDocument extends Document {
 
 #### Migrating from Next.js' `/app` directory
 
-Next.js' `app/` directory layout files are created with two files: a `layout.jsx` file to customize the `<html>` and `<body>` contents, and a `body.jsx` file to customize the `<head>` element contents.
+Next.js' `app/` directory layout files are created with two files: a `layout.jsx` file to customize the `<html>` and `<body>` contents, and a `head.jsx` file to customize the `<head>` element contents.
 
 ```jsx title="app/layout.jsx"
 export default function Layout({ children }) {
@@ -317,7 +317,7 @@ export default function Head() {
 
 In Next.js, your posts either live in `/pages` or `/app/routeName/page.jsx`.
 
-In Astro, **all your page content must live within `src/`**.
+In Astro, **all your page content must live within `src/`**, in either `src/pages` or `src/content`.
 
 #### React pages
 
@@ -433,7 +433,7 @@ Convert any inline style objects (`style={{fontWeight: "bold"}}`) to inline HTML
 
 You may also need to replace any [CSS-in-JS libraries](https://github.com/withastro/astro/issues/4432) (e.g. styled-components) with other available CSS options in Astro.
 
-Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your code are required!
+Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your existing Tailwind code are required!
 
 See more about [Styling in Astro](/en/guides/styling/).
 
