Fred's edit pass on content collections guide (#2371)
* content collections docs pass

* update link from api-reference page

* updates for getEntryBySlug incl code examples

* Update content-collections.mdx

* fred pass 3

* update bad links

* update bad links

* update bad links

* Update src/pages/en/guides/content-collections.mdx

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

* Update src/pages/en/guides/content-collections.mdx

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

* update copy

* Update src/pages/en/guides/content-collections.mdx

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

* Update src/pages/en/guides/content-collections.mdx

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

* Update src/pages/en/guides/content-collections.mdx

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

* Update src/pages/en/guides/content-collections.mdx

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

* Update src/pages/en/guides/content-collections.mdx

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

* update docs

* update docs

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -759,7 +759,7 @@ const draftBlogPosts = await getCollection('blog', ({ data }) => {
 ---
 ```
 
-[Consulta la sección de guía de `getCollection()`](/es/guides/content-collections/#getcollection) para ejemplos de uso completo.
+[Consulta la sección de guía de `getCollection()`](/es/guides/content-collections/#querying-collections) para ejemplos de uso completo.
 
 ### `getEntry()`
 
@@ -829,7 +829,7 @@ const {Content, headings, remarkPluginFrontmatter} = await entry.render();
 ---
 ```
 
-Ver [la guía de renderizado de contenido de entrada](/es/guides/content-collections/#rendering-entry-content) para ejemplos de uso completo.
+Ver [la guía de renderizado de contenido de entrada](/es/guides/content-collections/) para ejemplos de uso completo.
 
 ## `import.meta`
 
