--- a/src/pages/pt-br/reference/api-reference.mdx
+++ b/src/pages/pt-br/reference/api-reference.mdx
@@ -754,7 +754,7 @@ const postagensRascunhoBlog = await getCollection('blog', ({ data }) => {
 ---
 ```
 
-[Veja a seção guia de `getCollection()`](/pt-br/guides/content-collections/#getcollection) para exemplos completos de uso.
+[Veja a seção guia de `getCollection()`](/pt-br/guides/content-collections/#querying-collections) para exemplos completos de uso.
 
 ### `getEntry()`
 
@@ -824,7 +824,7 @@ const { Content, headings, remarkPluginFrontmatter } = await entry.render();
 ---
 ```
 
-Veja [o guia de renderização de conteúdos de entrada](/pt-br/guides/content-collections/#rendering-entry-content) para exemplos de uso completos.
+Veja [o guia de renderização de conteúdos de entrada](/pt-br/guides/content-collections/) para exemplos de uso completos.
 
 ## `import.meta`
 
