--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -768,35 +768,34 @@ const draftBlogPosts = await getCollection('blog', ({ data }) => {
 ---
 ```
 
-[See the `getCollection()` guide section](/en/guides/content-collections/#getcollection) for complete usage examples.
+[See the `Content Collection` guide](/en/guides/content-collections/#querying-collections) for example usage.
 
-### `getEntry()`
+### `getEntryBySlug()`
 
 **Type:** `(collection: string, id: string) => CollectionEntry<collection>`
 
-`getEntry()` is a function that retrieves a single collection entry by collection name and [entry `id`](#id).
+`getEntryBySlug()` is a function that retrieves a single collection entry by collection name and entry `slug`.
 
 
 ```astro
 ---
-import { getEntry } from 'astro:content';
+import { getEntryBySlug } from 'astro:content';
 
-const enterprise = await getEntry('blog', 'enterprise.md');
+const enterprise = await getEntryBySlug('blog', 'enterprise.md');
 ---
 ```
 
+[See the `Content Collection` guide](/en/guides/content-collections/#querying-collections) for example usage.
+
 ### Collection Entry Type
 
-The [`getCollection()`](#getcollection) and [`getEntry()`](#getentry) functions each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
+The [`getCollection()`](#getcollection) and [`getEntryBySlug()`](#getentrybyslug) functions each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
 
 ```ts
 import type { CollectionEntry } from 'astro:content';
-
-// Example: Receive a `src/content/blog/` entry as props
-type Props = CollectionEntry<'blog'>;
 ```
 
-A `CollectionEntry<TCollectionName>` is an object with the following values:
+The `CollectionEntry<TCollectionName>` type is an object with the following values. `TCollectionName` is the name of the collection you're querying (e.g. `CollectionEntry<'blog'>`).
 
 #### `id`
 
@@ -834,14 +833,14 @@ A function to compile a given Markdown or MDX document for rendering. This retur
 
 ```astro
 ---
-import { getEntry } from 'astro:content';
-const entry = await getEntry('blog', 'entry-1.md');
+import { getEntryBySlug } from 'astro:content';
+const entry = await getEntryBySlug('blog', 'entry-1.md');
 
 const { Content, headings, remarkPluginFrontmatter } = await entry.render();
 ---
 ```
 
-See [the rendering entry contents guide](/en/guides/content-collections/#rendering-entry-content) for complete usage examples.
+[See the `Content Collection` guide](/en/guides/content-collections/#rendering-content-to-html) for example usage.
 
 ## `import.meta`
 
