--- a/src/pages/es/guides/styling.mdx
+++ b/src/pages/es/guides/styling.mdx
@@ -480,11 +480,11 @@ Svelte en Astro también funciona exactamente como se espera: [Svelte Styling Do
 
 ## Estilando Markdown
 
-Cualquier método de estilo de Astro está disponible para un [componente de diseño de Markdown](/es/core-concepts/layouts/#plantillas-de-markdownmdx).
+Cualquier método de estilo en Astro está disponible para un [componente de diseño de Markdown](/es/core-concepts/layouts/#plantillas-de-markdownmdx).
 
-You can apply global styles to your Markdown content by adding [`<style>` tags](#estilos-globales) and [imported stylesheets](#estilos-externos) to the layout that wraps your page content. You can also add [CSS integrations](#integraciones-css) including [Tailwind](/es/guides/integrations-guide/tailwind/).
+Puede aplicar estilos globales a tu contenido de Markdown agregando [etiquetas `<style>`](#estilos-globales) y [hojas de estilo importadas](#estilos-externos) al la plantilla que envuelve el contenido de tu página. También puedes agregar [integraciones de CSS](#integraciones-css) incluyendo [Tailwind](/es/guides/integrations-guide/tailwind/).
 
-If you are using Tailwind, the [typography plugin](https://tailwindcss.com/docs/typography-plugin) can be useful for styling Markdown.
+Si usas Tailwind, el [plugin de tipografía](https://tailwindcss.com/docs/typography-plugin) puede ser útil para estilar Markdown.
 
 ## Avanzado
 
