--- a/src/pages/es/install/auto.mdx
+++ b/src/pages/es/install/auto.mdx
@@ -94,28 +94,28 @@ Puedes empezar un nuevo proyecto de Astro basado en un [ejemplo oficial](https:/
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  # create a new project with an official example
+  # crea un nuevo proyecto a partir de un ejemplo oficial
   npm create astro@latest -- --template <example-name>
 
-  # create a new project based on a GitHub repository’s main branch  
+  # crea un nuevo proyecto basado en la rama `main` de un repositorio de GitHub
   npm create astro@latest -- --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  # create a new project with an official example
+  # crea un nuevo proyecto a partir de un ejemplo oficial
   pnpm create astro@latest --template <example-name>
   
-  # create a new project based on a GitHub repository’s main branch
+  # crea un nuevo proyecto basado en la rama `main` de un repositorio de GitHub
   pnpm create astro@latest --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  # create a new project with an official example
+  # crea un nuevo proyecto a partir de un ejemplo oficial
   yarn create astro --template <example-name>
   
-  # create a new project based on a GitHub repository’s main branch
+  # crea un nuevo proyecto basado en la rama `main` de un repositorio de GitHub
   yarn create astro --template <github-username>/<github-repo>
   ```
   </Fragment>
