--- a/src/pages/es/guides/rss.mdx
+++ b/src/pages/es/guides/rss.mdx
@@ -47,14 +47,14 @@ import rss from '@astrojs/rss';
 
 export function get(context) {
   return rss({
-    // `<title>` campo en el xml de salida
+    // `<title>` campo en el xml generado
     title: 'Buzz’s Blog',
-    // `<description>` campo en el xml de salida
+    // `<description>` campo en el xml generado
     description: 'A humble Astronaut’s guide to the stars',
-    // Mete en tu proyecto "site" desde el contexto del endpoint
+    // Usa el "site" desde el contexto del endpoint
     // https://docs.astro.build/en/reference/api-reference/#contextsite
     site: context.site,
-    // Arreglo de `<item>`s en el xml de salida
+    // Array de `<item>`s en el xml generado
     // Consulta la sección "Generando `items`" para ejemplos utilizando colecciones de contenido y glob imports
     items: [],
     // (opcional) inyecta xml personalizado
@@ -91,7 +91,7 @@ export async function get(context) {
 }
 ```
 
-Puedes configurar tu esquema de colección para forzar estas propiedades RSS esperadas. Importa y aplica `rssSchema` para asegurarte que cada entrada de colección produzca un item RSS válido.
+Puedes configurar tu esquema de colección para verificar y enforzar estas propiedades en el RSS. Importa y aplica `rssSchema` para asegurarte que cada entrada de colección produzca un item RSS válido.
 
 ```js title="src/content/config.ts" "rssSchema"
 import { rssSchema } from '@astrojs/rss';
@@ -106,7 +106,7 @@ export const collections = { blog };
 
 <Since v="2.1.0" pkg="@astrojs/rss" />
 
-Para crear un RSS feed de documentos en `src/pages/`, utiliza la función `pagesGlobToRssItems()`. Esta acepta un resultado de [`import.meta.glob`](https://vitejs.dev/guide/features.html#glob-import) y devuelve un arreglo de items RSS válidos (consulta [más sobre escribir patrones glob](/es/guides/imports/#patrones-glob) para especificar qué páginas incluir).
+Para crear un RSS feed de documentos en `src/pages/`, utiliza la función `pagesGlobToRssItems()`. Esta acepta un resultado de [`import.meta.glob`](https://vitejs.dev/guide/features.html#glob-import) y devuelve un array de items RSS válidos (consulta [más sobre escribir patrones glob](/es/guides/imports/#patrones-glob) para especificar qué páginas incluir).
 
 Esta función asume, pero no verifica, que todas las propiedades RSS necesarias están presentes en el frontmatter de cada documento. Si encuentras errores, verifica manualmente el frontmatter de cada página.
 
