updated Astro.site changes

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -88,11 +88,11 @@ Rename an existing `src/content/` folder to avoid conflicts. This folder, if it 
 
 In 1.0, Astro ensured the URL you set as `site` in `astro.config.mjs` always had a trailing slash when accessed using `Astro.site`.
 
-Astro 2.0 stops modifying the value of `site`. If you pass a URL without a trailing slash, `Astro.site` will also not have a trailing slash.
+Astro 2.0 no longer modifies the value of `site`. `Astro.site` will use the exact value defined, and a trailing slash must be specified if desired.
 
 #### What should I do?
 
-Make sure you set `site` using a URL that includes the trailing slash.
+ In `astro.config.mjs`, add a trailing slash to the URL set in `site`. 
 
 ```js del={5} ins={6}
 // astro.config.mjs
