update 1.0 to 1.x when referring generically to v1

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -86,7 +86,7 @@ Rename an existing `src/content/` folder to avoid conflicts. This folder, if it 
 
 ### Changed: `Astro.site` trailing slash
 
-In 1.0, Astro ensured the URL you set as `site` in `astro.config.mjs` always had a trailing slash when accessed using `Astro.site`.
+In 1.x, Astro ensured the URL you set as `site` in `astro.config.mjs` always had a trailing slash when accessed using `Astro.site`.
 
 Astro 2.0 no longer modifies the value of `site`. `Astro.site` will use the exact value defined, and a trailing slash must be specified if desired.
 
@@ -106,7 +106,7 @@ export default defineConfig({
 
 ### Changed: `_astro/` folder for build assets
 
-In 1.0, assets were built to various locations, including `assets/`, `chunks/` and the root of the build output.
+In 1.x, assets were built to various locations, including `assets/`, `chunks/` and the root of the build output.
 
 Astro 2.0 moves and unifies the location of all build output assets to a new `_astro/` folder. 
 
@@ -177,7 +177,7 @@ export default defineConfig({
 
 #### Replaced: `extendPlugins` changed to `extendMarkdownConfig`
 
-In 1.0, the MDX integration’s `extendPlugins` option managed how your MDX files should inherit your Markdown configuration.
+In 1.x, the MDX integration’s `extendPlugins` option managed how your MDX files should inherit your Markdown configuration.
 
 Astro 2.0 replaces `extendPlugins` with three new, independently-configurable options:
 
@@ -252,7 +252,7 @@ Revisit your Markdown and MDX configuration and compare your existing config wit
 
 ### Changed: Plugin access to frontmatter
 
-In 1.0, remark and rehype plugins did not have access to user frontmatter. Astro merged plugin frontmatter with your file's frontmatter, without passing the file frontmatter to your plugins.
+In 1.x, remark and rehype plugins did not have access to user frontmatter. Astro merged plugin frontmatter with your file's frontmatter, without passing the file frontmatter to your plugins.
 
 Astro 2.0 gives remark and rehype plugins access to user frontmatter via frontmatter injection. This allows plugin authors to modify a user's existing frontmatter, or compute new properties based on other properties.
 
@@ -263,7 +263,7 @@ Check any remark and rehype plugins you have written to see whether their behavi
 
 ### Changed: RSS Configuration
 
-In 1.0, Astro's RSS package allowed you to use `items: import.meta.glob(...)` to generate a list of RSS feed items. This usage is now deprecated and will eventually be removed.
+In 1.x, Astro's RSS package allowed you to use `items: import.meta.glob(...)` to generate a list of RSS feed items. This usage is now deprecated and will eventually be removed.
 
 Astro 2.0 introduces a `pagesGlobToRssItems()` wrapper to the `items` property.
 
