i18n(zh-cn): fix some typos

--- a/src/pages/zh-cn/guides/client-side-scripts.mdx
+++ b/src/pages/zh-cn/guides/client-side-scripts.mdx
@@ -24,8 +24,8 @@ layout: ~/layouts/MainLayout.astro
 
 Astro 默认处理 `<script>` 标签。
 
-- 任何倒入会被捆绑，这允许你导入本地文件或者 Node 模块。
-- 处理过的脚本会被注射到你的页面的 `<head>`，同时添加[`type="module"`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules)。
+- 任何导入会被捆绑，这允许你导入本地文件或者 Node 模块。
+- 处理过的脚本会被注入到你的页面的 `<head>`，同时添加[`type="module"`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules)。
 - 完全支持 TypeScript，包括导入 TypeScript 文件。
 - 如果你的组件在一个页面上被用到了多次，脚本只会有一个。
 
