--- a/src/pages/zh-cn/guides/deploy/cloudflare.mdx
+++ b/src/pages/zh-cn/guides/deploy/cloudflare.mdx
@@ -74,7 +74,7 @@ npx astro add cloudflare
 
 如果你想要手动安装适配器，请完成以下两个步骤：
 
-1. 使用你喜欢的包管理器将 `@astrojs/cloudflare` 添加到项目的依赖项中。如果你正在使用 npm 或不确定是那个包管理器，请在终端中运行：
+1. 使用你喜欢的包管理器将 `@astrojs/cloudflare` 添加到项目的依赖项中。如果你正在使用 npm 或不确定是哪个包管理器，请在终端中运行：
 
     ```bash
     npm install @astrojs/cloudflare
