--- a/src/pages/zh-cn/guides/testing.mdx
+++ b/src/pages/zh-cn/guides/testing.mdx
@@ -39,7 +39,7 @@ Playwright 是一个针对现代网络应用的端到端测试框架。使用 Ja
   </Fragment>
 </PackageManagerTabs>
 
-### 创建那你的第一个 Playwright 测试
+### 创建你的第一个 Playwright 测试
 
 1. 选择要测试的页面，我们将使用下面的 `index.astro` 页面为例。
 
