update Markdown/MDX changes for clarity

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -127,7 +127,9 @@ Update your deployment platform configuration if it relies on the location of th
 
 #### Removed: `extendDefaultPlugins`
 
-Astro 2.0 removes `markdown.extendDefaultPlugins` for controlling Astro's default plugin behavior when adding your own plugins. 
+In 1.x, Astro used `markdown.extendDefaultPlugins` to re-enable Astro's default plugins when adding your own Markdown plugins.
+
+Astro 2.0 removes this configuration option entirely because its behavior is now the default in Astro.
 
 Applying remark and rehype plugins in your Markdown configuration  **no longer disables Astro's default plugins**, so this option is no longer needed.
 
@@ -151,11 +153,13 @@ export default defineConfig({
 
 #### Added: `gfm` and `smartypants`
 
-Astro 2.0 replaces `markdown.extendDefaultPlugins` with separate Boolean options to control each of Astro's built-in default Markdown plugins individually. These are enabled by default, and can be set to `false` to remove each plugin independently.
+In 1.x, you could choose to disable both of Astro's default Markdown plugins (GitHub-Flavored Markdown and SmartyPants) by setting `markdown.extendDefaultPlugins: false`.
+
+Astro 2.0 replaces `markdown.extendDefaultPlugins: false` with separate Boolean options to control each of Astro's built-in default Markdown plugins individually. These are enabled by default, and can be set to `false` independently.
 
 ##### What should I do?
 
-Replace `extendDefaultPlugins: false` and add the flags to disable each plugin individually instead.
+Remove `extendDefaultPlugins: false` and add the flags to disable each plugin individually instead.
 
 - `markdown.gfm: false` disables GitHub-Flavored Markdown
 - `markdown.smartypants: false` disables SmartyPants
@@ -179,7 +183,7 @@ export default defineConfig({
 
 In 1.x, the MDX integration’s `extendPlugins` option managed how your MDX files should inherit your Markdown configuration.
 
-Astro 2.0 replaces `extendPlugins` with three new, independently-configurable options:
+Astro 2.0 replaces the behavior controlled by `extendPlugins` with three new, independently-configurable options:
 
 - **[`extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig)** (`true` by default) to inherit all of your Markdown configuration or none of it.
 - **`gfm`** (`true` by default) to enable or disable GitHub-Flavored Markdown in MDX.
@@ -224,7 +228,7 @@ export default defineConfig({
 
 #### Added: More MDX config options to match Markdown
 
-Astro 2.0 allows you to individually set [every available Markdown configuration option](/en/reference/configuration-reference/#markdown-options) (except `drafts`) separately in your MDX integration configuration.
+Astro 2.0 allows you to now individually set [every available Markdown configuration option](/en/reference/configuration-reference/#markdown-options) (except `drafts`) separately in your MDX integration configuration.
 
 ```js
 // astro.config.mjs
