tightened up wording more.

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -129,11 +129,9 @@ Update your deployment platform configuration if it relies on the location of th
 
 In 1.x, Astro used `markdown.extendDefaultPlugins` to re-enable Astro's default plugins when adding your own Markdown plugins.
 
-Astro 2.0 removes this configuration option entirely because its behavior is now the default in Astro.
+Astro 2.0 removes this configuration option entirely because its behavior is now the default.
 
-Applying remark and rehype plugins in your Markdown configuration  **no longer disables Astro's default plugins**, so this option is no longer needed.
-
-GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `remarkPlugins` or `rehypePlugins` are configured.
+Applying remark and rehype plugins in your Markdown configuration  **no longer disables Astro's default plugins**. GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `remarkPlugins` or `rehypePlugins` are configured.
 
 
 ##### What should I do?
