mdx config polish

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -179,13 +179,13 @@ export default defineConfig({
 
 #### Replaced: `extendPlugins` changed to `extendMarkdownConfig`
 
-In 1.x, the MDX integration’s `extendPlugins` option managed how your MDX files should inherit your Markdown configuration.
+In 1.x, the MDX integration’s `extendPlugins` option managed how your MDX files should inherit your Markdown configuration: all your Markdown configuration (`markdown`), or Astro's default plugins only (`default`).
 
-Astro 2.0 replaces the behavior controlled by `extendPlugins` with three new, independently-configurable options:
+Astro 2.0 replaces the behavior controlled by `mdx.extendPlugins` with three new, independently-configurable options that are `true` by default:
 
-- **[`extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig)** (`true` by default) to inherit all of your Markdown configuration or none of it.
-- **`gfm`** (`true` by default) to enable or disable GitHub-Flavored Markdown in MDX.
-- **`smartypants`** (`true` by default) to enable or disable SmartyPants in MDX.
+- **[`mdx.extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig)** to inherit all or none of your Markdown configuration
+- **`mdx.gfm`** to enable or disable GitHub-Flavored Markdown in MDX
+- **`mdx.smartypants`** to enable or disable SmartyPants in MDX
 
 ##### What should I do?
 
@@ -205,7 +205,7 @@ export default defineConfig({
 });
 ```
 
-Replace `extendPlugins: 'defaults'` with `extendMarkdownConfig: false` and add the [separate options for GitHub-Flavored Markdown and SmartyPants](/en/guides/integrations-guide/mdx/#options-inherited-from-markdown-config) to enable these default plugins individually in MDX.
+Replace `extendPlugins: 'defaults'` with `extendMarkdownConfig: false` and add the separate options for GitHub-Flavored Markdown and SmartyPants to enable these default plugins individually in MDX.
 
 ```js del={8} ins={9-11}
 // astro.config.mjs
