--- a/src/pages/es/core-concepts/astro-pages.mdx
+++ b/src/pages/es/core-concepts/astro-pages.mdx
@@ -22,7 +22,7 @@ Astro es compatible con los siguientes tipos de archivos en el directorio `src/p
 
 Astro aprovecha una estrategia de enrutamiento llamada **enrutamiento basado en archivos**. Cada archivo `.astro` en la carpeta `src/pages` se convierte en una página o un endpoint en tu proyecto de acuerdo a su ruta.
 
-Un archivo puede generar múltiples páginas usando [enrutamiento dinámico](/es/core-concepts/routing/#rutas-dinámicas). Esto te permite crear páginas incluso si tu contenido está fuera del directorio especial `/pages/`, como en una [colección de contenido](/es/guides/content-collections/#rendering-entry-content) o un [CMS](/es/guides/cms/).
+Un archivo puede generar múltiples páginas usando [enrutamiento dinámico](/es/core-concepts/routing/#rutas-dinámicas). Esto te permite crear páginas incluso si tu contenido está fuera del directorio especial `/pages/`, como en una [colección de contenido](/es/guides/content-collections/) o un [CMS](/es/guides/cms/).
 
 📚 Lea más sobre [enrutamiento en Astro](/es/core-concepts/routing/)
 
